section three and fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
 	padding-left: 100px;
+	overflow: visible;
 }
 
 .section-two {
@@ -33,6 +34,14 @@
 	overflow: hidden;
 	display: flex;
 	align-items: center;
+}
+
+.section-three {
+	display: grid;
+	justify-content: start;
+	grid-template-columns: auto 480px;
+
+	overflow: visible;
 }
 
 .p-title {
@@ -49,9 +58,22 @@
 	align-self: center;
 }
 
+.grid-col-left {
+	grid-row: 1/3;
+
+	overflow: visible;
+}
+
+.grid-col-right {
+	grid-column: 2;
+}
+
 .p-one {
 	line-height: 1.6;
 	margin-bottom: 4rem;
+	font-family: 'Overpass', sans-serif;
+	font-weight: 400;
+	color: hsl(207, 13%, 34%);
 }
 
 .p-two {
@@ -77,6 +99,11 @@
 	transform: translate(-20%, -20%);
 	scale: 1;
 }
+
+.ill-4 {
+	transform: translate(-20%, -20%);
+}
+
 .mt-4 {
 	margin-top: 4rem;
 }
